tests/checker/diagnostics/0865_gadt_packed_branch_result_mismatch_01.ml.infer.expected
File "0865_gadt_packed_branch_result_mismatch_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0865_gadt_packed_branch_result_mismatch_01 is not a valid module name.

File "0865_gadt_packed_branch_result_mismatch_01.ml", line 9, characters 33-34:
9 |   | Pack_alpha (Bool_alpha b) -> b
                                     ^
Error: The value b has type bool but an expression was expected of type int
